[metadata]
name = sankeyflow
version = 0.4.0
author = Riley Xu
author_email = riley.xu@gmail.com
description = Creating Sankey flow diagrams in Matplotlib
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riley-x/SankeyFlow
project_urls =
    Bug Tracker = https://github.com/riley-x/SankeyFlow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
